# Optical-Tracking-Velocimetry

./: README.md
OTV/: CMakeLists.txt  run.sh
OTV/include/: ops.h  reader.h  utils.h  writer.h
OTV/script/: calib.sh  lk.sh
OTV/src/: filter.cpp  main.cpp  ops.cpp  reader.cpp  utils.cpp  writer.cpp
Real-time OTV/: CMakeLists.txt  run.sh
Real-time OTV/include/: filter.h  ops.h  reader.h  utils.h  writer.h
Real-time OTV/output/: stats_synthesis.csv  sub_regions.csv
Real-time OTV/script/: utility_video.sh
Real-time OTV/src/: filter.cpp  main.cpp  ops.cpp  reader.cpp  utils.cpp  writer.cpp
